[gd_scene load_steps=4 format=3 uid="uid://blohdeto7mr33"]

[ext_resource type="Script" uid="uid://cnacs7i3b8x3o" path="res://Scenes/Items/throwable_weapon.gd" id="1_tsp4v"]
[ext_resource type="Texture2D" uid="uid://bplt3t4varl1b" path="res://Sprites/Weapon/Rock.png" id="2_d5moc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eqm7u"]
radius = 16.0

[node name="Throwable_Item" type="RigidBody2D" groups=["Throwable"]]
collision_layer = 64
collision_mask = 64
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_tsp4v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_eqm7u")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_d5moc")

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="DeactivateTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="DeactivateTimer" to="." method="_on_deactivate_timer_timeout"]
